# internal/app/todo/todo_controller.go
@@ -1,13 +1,14 @@
 package todo
 
 import (
-	todoDto "go-boilerplate-api/internal/app/todo/dto"
-	todoEntity "go-boilerplate-api/internal/app/todo/entities"
+	"go-boilerplate-api/internal/model"
 	"go-boilerplate-api/internal/pkg/db"
 	"net/http"
 	"time"
 
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+	"github.com/spf13/viper"
 )
 
 type TodoController interface {
@@ -20,11 +21,15 @@ type TodoController interface {
 
 // @BasePath	/v1
 type todoController struct {
-	service TodoService
+	defaultUser string
+	service     TodoService
 }
 
 func ConstructController(db *db.Database) TodoController {
-	return &todoController{service: ConstructService(db)}
+	return &todoController{
+		defaultUser: viper.GetString("server.defaultUser"),
+		service:     ConstructService(db),
+	}
 }
 
 // Todo Api godoc
@@ -35,31 +40,30 @@ func ConstructController(db *db.Database) TodoController {
 //	@Accept			json
 //	@Produce		json
 //	@Success		201			{string}	CreateItem					todo	item
-//	@Param			todoItem	body		todoDto.CreateTodoRequest	true	"CreateItem Todo Item"
+//	@Param			todoItem	body		CreateTodoRequest	true	"CreateItem Todo Item"
 //	@Router			/todos [post]
 func (t *todoController) CreateItem(ctx *gin.Context) {
-	var creatingItem todoDto.CreateTodoRequest
+	var creatingItem CreateTodoRequest
 	if err := ctx.ShouldBindJSON(&creatingItem); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
 	entity := convertToEntity(creatingItem)
-	createdItem, err := t.service.Create(entity)
+	createdItem, err := t.service.Create(t.defaultUser, entity)
+
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
+	} else {
+		ctx.JSON(http.StatusCreated, createdItem)
 	}
-
-	ctx.JSON(http.StatusCreated, createdItem)
 }
 
-func convertToEntity(dto todoDto.CreateTodoRequest) *todoEntity.Todo {
-	return &todoEntity.Todo{
-		UserId:      "henry.chou",
+func convertToEntity(dto CreateTodoRequest) *model.Todo {
+	return &model.Todo{
 		Description: dto.Description,
-		StartDate:   time.Time(*dto.StartDate),
-		EndDate:     time.Time(*dto.EndDate),
+		StartDate:   (*time.Time)(dto.StartDate),
+		EndDate:     (*time.Time)(dto.EndDate),
 	}
 }
 
@@ -80,10 +84,14 @@ func (t *todoController) FindAll(ctx *gin.Context) {
 	}
 	items, err := t.service.List(userId)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err})
+		responseInternalServerError(ctx, err)
 	} else {
 		ctx.JSON(http.StatusOK, items)
 	}
+}
+
+func responseInternalServerError(c *gin.Context, err error) {
+	c.JSON(http.StatusInternalServerError, gin.H{"error": err})
 }
 
 // Todo Api godoc
@@ -98,7 +106,13 @@ func (t *todoController) FindAll(ctx *gin.Context) {
 //	@Router			/todos/{itemId} [get]
 func (t *todoController) GetItem(ctx *gin.Context) {
 	itemId := ctx.Param("itemId")
-	t.service.Get(itemId)
+	item, err := t.service.Get(t.defaultUser, itemId)
+
+	if err != nil {
+		responseInternalServerError(ctx, err)
+	} else {
+		ctx.JSON(http.StatusOK, item)
+	}
 }
 
 // Todo Api godoc
@@ -110,12 +124,36 @@ func (t *todoController) GetItem(ctx *gin.Context) {
 //	@Produce		json
 //	@Success		200			{string}	UpdateItem					todo	item
 //	@Param			itemId		path		string						true	"the item id to be updated"	example(7d105cc8-a709-4a28-ae96-f0270bc5ad20)
-//	@Param			todoItem	body		todoDto.UpdateTodoRequest	true	"UpdateItem Todo Item"
+//	@Param			todoItem	body		UpdateTodoRequest	true	"UpdateItem Todo Item"
 //	@Router			/todos/{itemId} [patch]
 func (t *todoController) UpdateItem(ctx *gin.Context) {
-	var updatingItem todoDto.UpdateTodoRequest
+	var updatingItem UpdateTodoRequest
+	itemId := ctx.Param("itemId")
 	if err := ctx.ShouldBindJSON(&updatingItem); err != nil {
+		responseInternalServerError(ctx, err)
 		return
+	}
+
+	model := &model.Todo{
+		ID:          uuid.MustParse(itemId),
+		UserId:      t.defaultUser,
+		Description: updatingItem.Description,
+	}
+
+	if updatingItem.StartDate != nil {
+		model.StartDate = (*time.Time)(updatingItem.StartDate)
+	}
+
+	if updatingItem.EndDate != nil {
+		model.EndDate = (*time.Time)(updatingItem.EndDate)
+	}
+
+	updatedItem, err := t.service.Update(t.defaultUser, model)
+
+	if err != nil {
+		responseInternalServerError(ctx, err)
+	} else {
+		ctx.JSON(http.StatusOK, updatedItem)
 	}
 }
 
@@ -130,5 +168,11 @@ func (t *todoController) UpdateItem(ctx *gin.Context) {
 //	@Router			/todos/{itemId} [delete]
 func (t *todoController) DeleteItem(ctx *gin.Context) {
 	itemId := ctx.Param("itemId")
-	t.service.Delete(itemId)
+	err := t.service.Delete(t.defaultUser, itemId)
+
+	if err != nil {
+		responseInternalServerError(ctx, err)
+	} else {
+		ctx.Status(http.StatusNoContent)
+	}
 }
